--- a/dashboard.html
+++ b/dashboard.html
@@ -3,221 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Style Selection - FrameFusion</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    /* Global Styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #121212;
-      color: white;
-    }
-
-    h1, h2 {
-      color: white;
-      text-align: center;
-      font-weight: 600;
-    }
-
-    h1 {
-      font-size: 36px;
-      margin-top: 50px;
-    }
-
-    .page-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 85vh;
-    }
-
-    .form-container {
-      background-color: #1f1f1f;
-      padding: 40px;
-      width: 100%;
-      max-width: 480px;
-      border-radius: 8px;
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
-    }
-
-    .form-container h2 {
-      margin-bottom: 30px;
-    }
-
-    .input-field {
-      width: 100%;
-      padding: 15px;
-      margin-bottom: 20px;
-      border-radius: 5px;
-      border: 1px solid #444;
-      background-color: #2c2c2c;
-      color: white;
-      font-size: 16px;
-    }
-
-    .input-field:focus {
-      outline: none;
-      border-color: #ff6f61;
-    }
-
-    .submit-btn {
-      width: 100%;
-      background-color: #ff6f61;
-      color: white;
-      border: none;
-      padding: 15px;
-      font-size: 18px;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 20px;
-      transition: background-color 0.3s;
-      font-weight: 600;
-    }
-
-    .submit-btn:hover {
-      background-color: #e05c50;
-    }
-
-    .style-option {
-      margin-bottom: 15px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .style-option input {
-      margin-right: 10px;
-    }
-
-    @media (max-width: 600px) {
-      .form-container {
-        padding: 20px;
-      }
-
-      .submit-btn {
-        font-size: 16px;
-      }
-    }
-
-    /* Modal Styles */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      overflow: auto;
-      padding-top: 60px;
-    }
-
-    .modal-content {
-      background-color: #1f1f1f;
-      margin: 5% auto;
-      padding: 20px;
-      border-radius: 8px;
-      width: 80%;
-      text-align: center;
-    }
-
-    .modal-button {
-      background-color: #ff6f61;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-
-    .modal-button:hover {
-      background-color: #e05c50;
-    }
-  </style>
+  <title>FrameFusion - Style Selection</title>
 </head>
 <body>
 
-  <h1>Style Selection - FrameFusion</h1>
-
-  <div class="page-container">
-    <div class="form-container">
-      <h2>Choose Your Thumbnail Style</h2>
-
-      <!-- Style Selection Prompt -->
-      <div class="style-option">
-        <label for="style1">Dark Theme</label>
-        <input type="radio" id="style1" name="style" value="dark">
-      </div>
-      <div class="style-option">
-        <label for="style2">Light Theme</label>
-        <input type="radio" id="style2" name="style" value="light">
-      </div>
-      <div class="style-option">
-        <label for="style3">Red Accent</label>
-        <input type="radio" id="style3" name="style" value="red-accent">
-      </div>
-
-      <!-- Additional Information/Prompt (e.g., Style Details) -->
-      <input type="text" class="input-field" placeholder="Enter any additional details..." id="additionalDetails">
-
-      <!-- Action Button -->
-      <button class="submit-btn" id="submitBtn">Apply Style</button>
-    </div>
-  </div>
-
-  <!-- Modal (Popup) -->
-  <div id="modal" class="modal">
-    <div class="modal-content">
-      <h2>Thumbnail will be provided soon!</h2>
-      <p>We are processing your request. You will receive your thumbnail shortly.</p>
-      <button class="modal-button" id="closeModalBtn">Okay</button>
-    </div>
-  </div>
-
-  <!-- Firebase Script or other JS if needed -->
-  <script>
-    const submitBtn = document.getElementById('submitBtn');
-    const modal = document.getElementById('modal');
-    const closeModalBtn = document.getElementById('closeModalBtn');
-
-    submitBtn.addEventListener('click', () => {
-      const selectedStyle = document.querySelector('input[name="style"]:checked');
-      const additionalDetails = document.getElementById('additionalDetails').value;
-
-      // Ensure that the user has entered additional details and selected a style
-      if (selectedStyle && additionalDetails.trim() !== "") {
-        // Open modal with success message
-        modal.style.display = 'block';
-      } else {
-        if (!selectedStyle) {
-          alert('Please select a style!');
-        }
-        if (additionalDetails.trim() === "") {
-          alert('Please provide additional details!');
-        }
-      }
-    });
-
-    // Close modal when the user clicks "Okay"
-    closeModalBtn.addEventListener('click', () => {
-      modal.style.display = 'none';
-    });
-
-    // Close modal if the user clicks outside of the modal content
-    window.onclick = function(event) {
-      if (event.target === modal) {
-        modal.style.display = 'none';
-      }
-    };
-  </script>
+  <!-- Embed JotForm -->
+  <script type="text/javascript" src="https://form.jotform.com/jsform/250161722656050"></script>
 
 </body>
 </html>
